--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@hookform/resolvers": "^2.9.8",
+    "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
