--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1",
     "react-router-dom": "^6.4.1",
+    "recharts": "^2.1.14",
     "yup": "^0.32.11"
   },
   "devDependencies": {
